--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.19.0",
+    "@tanstack/react-router": "^1.131.41",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
+    "@tanstack/router-plugin": "^1.131.43",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
