--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,12 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Clear npm cache and reinstall Biome
+      run: npm cache clean --force && npm install @biomejs/biome@^1.9.4
+
+    - name: Verify Biome installation
+      run: npx @biomejs/biome --version
+
     - name: Type check
       run: npm run typecheck
 
