--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format:fix": "biome format --write .",
     "check": "biome check .",
     "check:fix": "biome check --write .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "organize-imports": "biome check --organize-imports-enabled=true --write .",
+    "ci": "npm run typecheck && npm run check && npm run build"
   },
   "dependencies": {
     "@google/genai": "^1.19.0",
@@ -22,12 +24,13 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.4",
+    "@biomejs/biome": "^1.9.4",
     "@tanstack/router-plugin": "^1.131.43",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
-  }
+  },
+  "packageManager": "npm@10.0.0"
 }
