--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,26 +14,25 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v2
       with:
-        node-version: '20'
-        cache: 'npm'
+        bun-version: latest
 
     - name: Install dependencies
-      run: npm ci
+      run: bun install --frozen-lockfile
 
     - name: Verify Biome installation
-      run: npx @biomejs/biome --version
+      run: bunx @biomejs/biome --version
 
     - name: Type check
-      run: npm run typecheck
+      run: bun run typecheck
 
     - name: Lint check
-      run: npm run lint
+      run: bun run lint
 
     - name: Format check
-      run: npm run format
+      run: bun run format
 
     - name: Build check
-      run: npm run build
+      run: bun run build
