package-lock.jsonを削除し、CIワークフローの依存関係インストール方法をbun.lockの有無に応じて変更。これにより、Bunを使用した依存関係の管理を強化。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,12 @@ jobs:
         bun-version: latest
 
     - name: Install dependencies
-      run: bun install --frozen-lockfile
+      run: |
+        if [ -f "bun.lock" ]; then
+          bun install --frozen-lockfile
+        else
+          bun install
+        fi
 
     - name: Verify Biome installation
       run: bunx @biomejs/biome --version
