CIワークフローの依存関係インストール方法を簡素化し、bun installコマンドを直接使用するように変更。これにより、インストールプロセスが効率化される。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,7 @@ jobs:
         bun-version: latest
 
     - name: Install dependencies
-      run: |
-        if [ -f "bun.lock" ]; then
-          bun install --frozen-lockfile
-        else
-          bun install
-        fi
+      run: bun install
 
     - name: Verify Biome installation
       run: bunx @biomejs/biome --version
