biome.jsonのファイル設定を修正し、"includes"を"include"に変更。これにより、ファイルのインクルード設定が正しく適用されるように改善。

--- a/biome.json
+++ b/biome.json
@@ -49,6 +49,6 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
+    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
   }
 }
