ビルド設定とファイル管理を改善し、.gitignoreに新たな無視ルールを追加。biome.jsonのファイル設定を更新し、不要なファイルを除外。コードの整形を行い、Reactコンポーネントのインポートを統一。さらに、Viteの設定を調整し、エディタ設定を追加。

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,9 @@
 {
   "recommendations": [
-    "biomejs.biome",
-    "ms-vscode.vscode-typescript-next",
-    "bradlc.vscode-tailwindcss",
-    "esbenp.prettier-vscode"
+    "biomejs.biome"
+  ],
+  "unwantedRecommendations": [
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
   ]
 }
