--- a/biome.json
+++ b/biome.json
@@ -49,6 +49,17 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
+    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
+    "ignore": [
+      "routeTree.gen.ts",
+      "node_modules/**",
+      "dist/**",
+      "build/**",
+      "*.min.js",
+      "*.bundle.js",
+      "coverage/**",
+      ".next/**",
+      "out/**"
+    ]
   }
 }
