--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,13 +4,16 @@
 	"scripts": {
 		"dev": "wrangler dev",
 		"deploy": "wrangler deploy --minify",
-		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
+		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
+		"typecheck": "bunx tsc --noEmit",
+		"build": "bunx tsc"
 	},
 	"dependencies": {
 		"@google/genai": "^1.19.0",
 		"hono": "^4.9.7"
 	},
 	"devDependencies": {
+		"typescript": "^5.8.0",
 		"wrangler": "^4.4.0"
 	}
 }
