fix: セキュリティ問題を修正 - フロントエンドからAPIキーを削除
- vite.config.tsからGEMINI_API_KEYの埋め込みを削除
- loadEnvの不要な使用を削除
- フロントエンドの環境変数型定義を更新（VITE_API_BASE_URLのみ）
- routeTree.gen.tsでany型の使用を防止
- フォーマットエラーを修正

--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -41,6 +41,7 @@
 			"bunx biome check --write",
 			"bunx biome format --write"
 		],
-		"*.{json,jsonc}": ["bunx biome format --write"]
+		"*.{json,jsonc}": ["bunx biome format --write"],
+		"routeTree.gen.ts": []
 	}
 }
