--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -39,7 +39,7 @@
 		"*.{js,jsx,ts,tsx}": [
 			"bunx biome lint",
 			"bunx biome check --write",
-			"bunx biome format --write"
+			"bunx biome format --write --unsafe"
 		],
 		"*.{json,jsonc}": ["bunx biome format --write"],
 		"routeTree.gen.ts": []
