改善: biome.jsonとpackage.jsonのファイル設定を更新
- biome.jsonでのファイルインクルードパターンを詳細化し、src、components、routes、services、typesディレクトリを含めるように変更
- package.jsonのlint、format、checkスクリプトを更新し、特定のディレクトリとファイルタイプを対象にするように修正

--- a/apps/front/biome.json
+++ b/apps/front/biome.json
@@ -49,7 +49,27 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
+		"include": [
+			"src/**/*.ts",
+			"src/**/*.tsx",
+			"src/**/*.js",
+			"src/**/*.jsx",
+			"components/**/*.ts",
+			"components/**/*.tsx",
+			"components/**/*.js",
+			"components/**/*.jsx",
+			"routes/**/*.ts",
+			"routes/**/*.tsx",
+			"routes/**/*.js",
+			"routes/**/*.jsx",
+			"services/**/*.ts",
+			"services/**/*.js",
+			"types/**/*.ts",
+			"*.ts",
+			"*.tsx",
+			"*.js",
+			"*.jsx"
+		],
 		"ignore": [
 			"routeTree.gen.ts",
 			"node_modules/**",
