改善: biome.jsonとpackage.jsonの設定を更新し、ファイルインクルードパターンを簡略化
- biome.jsonに"root": trueを追加し、ファイルインクルードパターンを簡素化
- package.jsonのlint、format、checkスクリプトを全体対象に変更し、特定のディレクトリを指定しないように修正
- 不要なファイルの除外ルールを追加し、整形スクリプトを整理

--- a/apps/front/biome.json
+++ b/apps/front/biome.json
@@ -50,25 +50,12 @@
 	"files": {
 		"ignoreUnknown": false,
 		"include": [
-			"src/**/*.ts",
-			"src/**/*.tsx",
-			"src/**/*.js",
-			"src/**/*.jsx",
-			"components/**/*.ts",
-			"components/**/*.tsx",
-			"components/**/*.js",
-			"components/**/*.jsx",
-			"routes/**/*.ts",
-			"routes/**/*.tsx",
-			"routes/**/*.js",
-			"routes/**/*.jsx",
-			"services/**/*.ts",
-			"services/**/*.js",
+			"src/**/*.{ts,tsx,js,jsx}",
+			"components/**/*.{ts,tsx,js,jsx}",
+			"routes/**/*.{ts,tsx,js,jsx}",
+			"services/**/*.{ts,js}",
 			"types/**/*.ts",
-			"*.ts",
-			"*.tsx",
-			"*.js",
-			"*.jsx"
+			"*.{ts,tsx,js,jsx}"
 		],
 		"ignore": [
 			"routeTree.gen.ts",
@@ -79,7 +66,20 @@
 			"*.bundle.js",
 			"coverage/**",
 			".next/**",
-			"out/**"
+			"out/**",
+			"*.config.{js,ts}",
+			"vite.config.ts"
 		]
-	}
+	},
+	"overrides": [
+		{
+			"include": ["routeTree.gen.ts"],
+			"linter": {
+				"enabled": false
+			},
+			"formatter": {
+				"enabled": false
+			}
+		}
+	]
 }
