--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -7,15 +7,15 @@
 		"dev": "bun run vite",
 		"build": "bun run vite build",
 		"preview": "bun run vite preview",
-		"lint": "bunx biome lint src components routes services types *.ts *.tsx *.js *.jsx",
-		"lint:fix": "bunx biome lint --write src components routes services types *.ts *.tsx *.js *.jsx",
-		"format": "bunx biome format src components routes services types *.ts *.tsx *.js *.jsx",
-		"format:fix": "bunx biome format --write src components routes services types *.ts *.tsx *.js *.jsx",
-		"check": "bunx biome check src components routes services types *.ts *.tsx *.js *.jsx",
-		"check:fix": "bunx biome check --write src components routes services types *.ts *.tsx *.js *.jsx",
+		"lint": "bunx biome lint .",
+		"lint:fix": "bunx biome lint --write .",
+		"format": "bunx biome format .",
+		"format:fix": "bunx biome format --write .",
+		"check": "bunx biome check .",
+		"check:fix": "bunx biome check --write .",
 		"typecheck": "bunx tsc --noEmit",
-		"organize-imports": "bunx biome check --organize-imports-enabled=true --write src components routes services types *.ts *.tsx *.js *.jsx",
-		"ci": "bun run typecheck && bun run check && bun run build",
+		"organize-imports": "bunx biome check --organize-imports-enabled=true --write .",
+		"ci": "bunx biome ci && bun run typecheck && bun run build",
 		"prepare": "husky"
 	},
 	"dependencies": {
@@ -36,11 +36,7 @@
 	},
 	"packageManager": "bun@1.1.0",
 	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": [
-			"bunx biome lint",
-			"bunx biome check --write",
-			"bunx biome format --write --unsafe"
-		],
+		"*.{js,jsx,ts,tsx}": ["bunx biome check --write"],
 		"*.{json,jsonc}": ["bunx biome format --write"],
 		"routeTree.gen.ts": []
 	}
