新規: package-lock.jsonを追加し、依存関係を管理
- package-lock.jsonを新たに作成し、プロジェクトの依存関係を明示化
- apps/frontおよびapps/backendの依存関係を整理し、バージョンを固定
- biome.jsonのフォーマットを整え、インデントを統一
- 各コンポーネントのインポートスタイルを一貫性のあるものに変更

--- a/apps/front/biome.json
+++ b/apps/front/biome.json
@@ -48,15 +48,6 @@
 		}
 	},
 	"files": {
-		"ignoreUnknown": false,
-		"include": [
-			"src/**/*.{ts,tsx,js,jsx}",
-			"components/**/*.{ts,tsx,js,jsx}",
-			"routes/**/*.{ts,tsx,js,jsx}",
-			"services/**/*.{ts,js}",
-			"types/**/*.ts",
-			"*.{ts,tsx,js,jsx}"
-		],
 		"ignore": [
 			"routeTree.gen.ts",
 			"node_modules/**",
@@ -69,7 +60,8 @@
 			"out/**",
 			"*.config.{js,ts}",
 			"vite.config.ts"
-		]
+		],
+		"ignoreUnknown": false
 	},
 	"overrides": [
 		{
