--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "bun run vite",
-		"build": "bun run vite build",
+		"build": "vite build",
 		"preview": "bun run vite preview",
 		"lint": "bunx biome lint .",
 		"lint:fix": "bunx biome lint --write .",
@@ -32,7 +32,7 @@
 		"husky": "^9.1.7",
 		"lint-staged": "^15.2.10",
 		"typescript": "~5.8.2",
-		"vite": "^6.2.0"
+		"vite": "^6.3.6"
 	},
 	"packageManager": "bun@1.1.0",
 	"lint-staged": {
