依存関係の更新と設定ファイルの修正
- viteのバージョンを6.2.0から6.3.6に更新
- biome.jsonのformatter設定を無効化し、jsonセクションにformatterを追加
- ファイルのignoreリストにpackage.json、tsconfig.json、metadata.json、biome.jsonを追加
- vite.config.tsのrouteFileIgnorePatternを修正

--- a/apps/front/biome.json
+++ b/apps/front/biome.json
@@ -27,12 +27,7 @@
 		}
 	},
 	"formatter": {
-		"enabled": true,
-		"formatWithErrors": false,
-		"indentStyle": "space",
-		"indentWidth": 2,
-		"lineWidth": 100,
-		"lineEnding": "lf"
+		"enabled": false
 	},
 	"javascript": {
 		"formatter": {
@@ -43,8 +38,12 @@
 			"arrowParentheses": "always",
 			"bracketSpacing": true,
 			"bracketSameLine": false,
-			"quoteStyle": "single",
 			"attributePosition": "auto"
+		}
+	},
+	"json": {
+		"formatter": {
+			"enabled": true
 		}
 	},
 	"files": {
@@ -59,7 +58,11 @@
 			".next/**",
 			"out/**",
 			"*.config.{js,ts}",
-			"vite.config.ts"
+			"vite.config.ts",
+			"package.json",
+			"tsconfig.json",
+			"metadata.json",
+			"biome.json"
 		],
 		"ignoreUnknown": false
 	},
@@ -69,6 +72,12 @@
 			"linter": {
 				"enabled": false
 			},
+			"formatter": {
+				"enabled": false
+			}
+		},
+		{
+			"include": ["package.json", "tsconfig.json", "*.config.{js,ts}"],
 			"formatter": {
 				"enabled": false
 			}
