--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,8 @@ jobs:
     - name: Type check
       run: bun run typecheck
 
-    - name: Lint check
-      run: bun run lint
-
-    - name: Format check
-      run: bun run format
+    - name: Lint and format check
+      run: bun run check
 
     - name: Build check
       run: bun run build
