--- a/apps/front/biome.json
+++ b/apps/front/biome.json
@@ -27,7 +27,12 @@
 		}
 	},
 	"formatter": {
-		"enabled": false
+		"enabled": true,
+		"formatWithErrors": false,
+		"indentStyle": "space",
+		"indentWidth": 2,
+		"lineWidth": 100,
+		"lineEnding": "lf"
 	},
 	"javascript": {
 		"formatter": {
