fix: update lint-staged and biome configurations

--- a/apps/front/biome.json
+++ b/apps/front/biome.json
@@ -74,7 +74,7 @@
 	},
 	"overrides": [
 		{
-			"include": ["routeTree.gen.ts", "src/routeTree.gen.ts"],
+			"include": ["**/routeTree.gen.ts"],
 			"linter": {
 				"enabled": false,
 				"rules": {
